# trivianew

./: README.md  main.py  preguntas.csv  pyproject.toml  trivia.py  trivia_game.py
